cmake_minimum_required(VERSION 3.14)
project(Bai1 C)

set(CMAKE_C_STANDARD 99)

add_executable(Assignent2_2407_Bai_1 "Assignment2_2407/Bai_1/main.c")
add_executable(Assignent2_2407_Bai_2 "Assignment2_2407/Bai_2/main.c")
add_executable(LabSession3_2607 "LabSession3_2607/main.c")
add_executable(Assignment3_2607 "Assignment3_2607/main.c")