cmake_minimum_required(VERSION 3.14)
project(Bai1 C)

set(CMAKE_C_STANDARD 99)

add_executable(Assignent2_2407_Bai_1 "Assignment2_2407/Bai_1/main.c")
add_executable(Assignent2_2407_Bai_2 "Assignment2_2407/Bai_2/main.c")
add_executable(LabSession3_2607 "LabSession3_2607/main.c")
add_executable(Assignment3_2607 "Assignment3_2607/main.c")
add_executable(LabSession4_2907 "LabSession4_2907/main.c")
add_executable(Assignment4_2907_Bai_1 "Assignment4_2907/Bai_1/main.c")
add_executable(Assignment4_2907_Bai_2 "Assignment4_2907/Bai_2/main.c")
add_executable(Assignment4_2907_Bai_3 "Assignment4_2907/Bai_3/main.c")
add_executable(Assignment5_3107_Bai_1 "Assignment5_3107/Bai_1/main.c")
add_executable(Assignment5_3107_Bai_2 "Assignment5_3107/Bai_2/main.c")
add_executable(Assignment5_3107_Bai_3 "Assignment5_3107/Bai_3/main.c")
add_executable(Assignment6_0208_Bai_1 "Assignment6_0208/Bai_1/main.c")
add_executable(Assignment6_0208_Bai_2 "Assignment6_0208/Bai_2/main.c")