cmake_minimum_required(VERSION 3.14)
project(Bai1 C)

set(CMAKE_C_STANDARD 99)

add_executable(Assignent2_2407_Bai_1 "Assignment2_2407/Bai_1/main.c")
add_executable(Assignent2_2407_Bai_2 "Assignment2_2407/Bai_2/main.c")
add_executable(LabSession3_2607 "LabSession3_2607/main.c")
add_executable(Assignment3_2607 "Assignment3_2607/main.c")
add_executable(LabSession4_2907 "LabSession4_2907/main.c")
add_executable(Assignment4_2907_Bai_1 "Assignment4_2907/Bai_1/main.c")
add_executable(Assignment4_2907_Bai_2 "Assignment4_2907/Bai_2/main.c")
add_executable(Assignment4_2907_Bai_3 "Assignment4_2907/Bai_3/main.c")
add_executable(Assignment5_3107_Bai_1 "Assignment5_3107/Bai_1/main.c")
add_executable(Assignment5_3107_Bai_2 "Assignment5_3107/Bai_2/main.c")
add_executable(Assignment5_3107_Bai_3 "Assignment5_3107/Bai_3/main.c")
add_executable(Assignment6_0208_Bai_1 "Assignment6_0208/Bai_1/main.c")
add_executable(Assignment6_0208_Bai_2 "Assignment6_0208/Bai_2/main.c")
add_executable(Assignment7_0508_Bai_1 "Assignment7_0508/Bai_1/main.c")
add_executable(Assignment7_0508_Bai_2 "Assignment7_0508/Bai_2/main.c")
add_executable(Assignment7_0508_Bai_3 "Assignment7_0508/Bai_3/main.c")
add_executable(Assignment8_0708_Bai_1 "Assignment8_0708/Bai_1/main.c")
add_executable(Assignment8_0708_Bai_2 "Assignment8_0708/Bai_2/main.c")
add_executable(Assignment8_0708_Bai_3 "Assignment8_0708/Bai_3/main.c")
add_executable(Assignment8_0708_Bai_4 "Assignment8_0708/Bai_4/main.c")
add_executable(Assignment9_0908_Bai_1 "Assignment9_0908/Bai_1/main.c")
add_executable(Assignment9_0908_Bai_2 "Assignment9_0908/Bai_2/main.c")
add_executable(Ex_0208_Bai_1 "Ex_0208/Bai_1/main.c")
add_executable(Ex_0208_Bai_2 "Ex_0208/Bai_2/main.c")
add_executable(Ex_0208_Bai_3 "Ex_0208/Bai_3/main.c")
add_executable(Ex_0208_Bai_4 "Ex_0208/Bai_4/main.c")
add_executable(Ex_0208_Bai_5 "Ex_0208/Bai_5/main.c")
add_executable(Ex_0208_Bai_6 "Ex_0208/Bai_6/main.c")
add_executable(Ex_0208_Bai_7 "Ex_0208/Bai_7/main.c")
add_executable(Ex_0208_Bai_8 "Ex_0208/Bai_8/main.c")
add_executable(Ex_0208_Bai_9 "Ex_0208/Bai_9/main.c")
add_executable(Ex_0208_Bai_10 "Ex_0208/Bai_10/main.c")
add_executable(Ex_0208_Bai_11 "Ex_0208/Bai_11/main.c")